--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_svg: ^2.0.9
   intl: ^0.19.0
   connectivity_plus: ^5.0.2
+  smooth_page_indicator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
