--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   intl: ^0.19.0
   connectivity_plus: ^5.0.2
   smooth_page_indicator: ^2.0.1
+  webview_flutter: ^4.13.0
+  mailer: ^6.6.0
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
